test/invalidImports/a.ts
import { XX } from "ts-morph";
import {c1, Y} from './b';

console.log(X);
console.log(Y);
conso.log(c1);
